@@ -15,8 +15,10 @@ apport (0.103) UNRELEASED; urgency=low
     integer, to avoid exceptions when it's not. (LP: #193494)
   * apport/report.py: Use uname -srm, not -a, to hide the hostname. (part of
     LP #192786); also use os.uname() instead of calling the system program.
+  * problem_report.py(): Make write() work for reports with CompressedValues.
+    Add test case.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 25 Feb 2008 15:41:01 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 25 Feb 2008 17:18:08 +0100
 
 apport (0.102) hardy; urgency=low
 
